(fc) FileChannel.map and RandomAccessFile.setLength should not preallocate space

XMLWordPrintable

    • b12
    • Not verified

        This issue tracks reverting the changes in JDK-8168628 so that RandomAccessFile.setLength and the FileChannel.map do not call ftruncate64 to pre-allocate disk space. The background to this issue is that JDK-8168628 was mis-diagnosed, the real issue is that bulk transfer operations using Unsafe copyMemory lack memory guards. This requires changes in HotSpot and is tracked as JDK-8191278.

        More discussion on this topic here:
        http://mail.openjdk.java.net/pipermail/nio-dev/2018-April/005041.html

              Assignee:
              Alan Bateman
              Reporter:
              Alan Bateman
              Votes:
              0 Vote for this issue
              Watchers:
              4 Start watching this issue

                Created:
                Updated:
                Resolved: