src/java.base/windows/native/libnio/ch/FileChannelImpl.c
@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2000, 2017, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2000, 2018 Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -141,31 +141,6 @@ Java_sun_nio_ch_FileChannelImpl_unmap0(JNIEnv *env, jobject this,
 }
 
 JNIEXPORT jlong JNICALL
-Java_sun_nio_ch_FileChannelImpl_position0(JNIEnv *env, jobject this,
-                                          jobject fdo, jlong offset)
-{
-    BOOL result = 0;
-    HANDLE h = (HANDLE)(handleval(env, fdo));
-    LARGE_INTEGER where;
-    DWORD whence;
-
-    if (offset < 0) {
-        where.QuadPart = 0;
-        whence = FILE_CURRENT;
-    } else {
-        where.QuadPart = offset;
-        whence = FILE_BEGIN;
-    }
-
-    result = SetFilePointerEx(h, where, &where, whence);
-    if (result == 0) {
-        JNU_ThrowIOExceptionWithLastError(env, "Seek failed");
-        return IOS_THROWN;
-    }
-    return (jlong)where.QuadPart;
-}
-
-JNIEXPORT jlong JNICALL
 Java_sun_nio_ch_FileChannelImpl_transferTo0(JNIEnv *env, jobject this,
                                             jobject srcFD,
                                             jlong position, jlong count,
@@ -173,14 +148,17 @@ Java_sun_nio_ch_FileChannelImpl_transferTo0(JNIEnv *env, jobject this,
 {
     const int PACKET_SIZE = 524288;
 
+    LARGE_INTEGER where;
     HANDLE src = (HANDLE)(handleval(env, srcFD));
     SOCKET dst = (SOCKET)(fdval(env, dstFD));
     DWORD chunkSize = (count > java_lang_Integer_MAX_VALUE) ?
         java_lang_Integer_MAX_VALUE : (DWORD)count;
-    BOOL result = 0;
+    BOOL result;
 
-    jlong pos = Java_sun_nio_ch_FileChannelImpl_position0(env, this, srcFD, position);
-    if (pos == IOS_THROWN) {
+    where.QuadPart = position;
+    result = SetFilePointerEx(src, where, &where, FILE_BEGIN);
+    if (result == 0) {
+        JNU_ThrowIOExceptionWithLastError(env, "SetFilePointerEx failed");
         return IOS_THROWN;
     }
 
