src/java.base/unix/classes/sun/nio/ch/FileDispatcherImpl.java
@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2000, 2017, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2000, 2018, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -74,16 +74,16 @@ class FileDispatcherImpl extends FileDispatcher {
         return writev0(fd, address, len);
     }
 
+    long seek(FileDescriptor fd, long offset) throws IOException {
+        return seek0(fd, offset);
+    }
+
     int force(FileDescriptor fd, boolean metaData) throws IOException {
         return force0(fd, metaData);
     }
 
     int truncate(FileDescriptor fd, long size) throws IOException {
         return truncate0(fd, size);
-    }
-
-    int allocate(FileDescriptor fd, long size) throws IOException {
-        return allocate0(fd, size);
     }
 
     long size(FileDescriptor fd) throws IOException {
@@ -156,10 +156,10 @@ class FileDispatcherImpl extends FileDispatcher {
     static native int force0(FileDescriptor fd, boolean metaData)
         throws IOException;
 
-    static native int truncate0(FileDescriptor fd, long size)
+    static native long seek0(FileDescriptor fd, long offset)
         throws IOException;
 
-    static native int allocate0(FileDescriptor fd, long size)
+    static native int truncate0(FileDescriptor fd, long size)
         throws IOException;
 
     static native long size0(FileDescriptor fd) throws IOException;
